# brave-core

app/resources/: brave_generated_resources_en-GB.xtb
browser/: brave_profile_prefs.cc
browser/brave_shields/: ad_block_service_browsertest.cc
browser/ipfs/test/: BUILD.gn
browser/search/: BUILD.gn  ntp_utils.cc
chromium_src/chrome/installer/setup/: sources.gni
chromium_src/components/content_settings/core/common/: cookie_settings_base.cc  cookie_settings_base.h
chromium_src/url/: url_util.cc
common/: pref_names.cc  pref_names.h
components/brave_new_tab_ui/widgets/ftx/components/: summary.tsx
components/brave_wallet/browser/: BUILD.gn  eth_json_rpc_controller.cc  eth_json_rpc_controller.h
components/ipfs/: ipfs_network_utils.cc  ipfs_utils.cc  ipfs_utils_unittest.cc
components/url_loader_component/: BUILD.gn  url_loader_component.cc  url_loader_component.h
patches/: chrome-VERSION.patch  chrome-installer-setup-BUILD.gn.patch  chrome-installer-util-BUILD.gn.patch
test/: BUILD.gn
