source_set("search") {
  sources = []

  deps = []

  if (!is_android) {
    sources += [
      "ntp_utils.cc",
      "ntp_utils.h",
    ]

    deps += [
      "//base",
      "//brave/browser/profiles:profiles",
      "//brave/common:pref_names",
      "//brave/components/crypto_dot_com/browser/buildflags",
      "//brave/components/crypto_dot_com/common",
      "//chrome/common",
      "//components/pref_registry",
      "//components/prefs",
    ]
  }
}
